# Adaptive-AI-Assistant

./: .env.example  .gitignore  AdaptiveChat.py  IntentAnalyzer.py  ModelSelector.py  README.md  chat.py  docker-compose.yml  main.py  pyproject.toml  requirement.txt  resume_project_description.md  test.ipynb
backend/: Dockerfile  modelrouter.db
backend/alembic/: env.py
backend/alembic/versions/: 811b676d774b_add_rich_metadata_and_analytics_tables.py
backend/app/: main.py
backend/app/agents/evaluation/: evaluator.py
backend/app/agents/intent/: agent.py
backend/app/api/: analytics.py  api_v1.py  auth.py  chat.py  registry.py
backend/app/cache/: semantic_cache.py
backend/app/config/: logger.py  routing_weights.yaml  settings.py
backend/app/database/: session.py
backend/app/events/: __init__.py  outcome_consumer.py  outcome_publisher.py
backend/app/memory/: postgres_store.py  redis_store.py
backend/app/models/: analytics.py  chat.py  registry.py
backend/app/rag/: document_processor.py  retriever.py
backend/app/schemas/: analytics.py  cost.py  evaluation.py  intent.py  optimization.py  registry.py  selection.py  user.py
backend/app/services/: auth.py  model_validator.py  streaming.py
backend/app/tools/: __init__.py  calculator.py  python_executor.py  search.py
backend/tests/: conftest.py  test_api_health.py  test_cost_optimizer.py
frontend/: Dockerfile  next.config.js  next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: Sidebar.tsx
scripts/: run_backend.ps1
(+15 files in other folders)
