[project]
name = "adaptive-ai-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.22.1",
    "asyncpg>=0.29.0",
    "bcrypt>=5.0.0",
    "docx2txt>=0.9",
    "duckduckgo-search>=8.1.1",
    "faiss-cpu>=1.14.3",
    "fastapi[standard]>=0.138.2",
    "ipykernel>=7.3.0",
    "langchain>=1.3.11",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.8",
    "langchain-google-genai>=4.2.5",
    "langchain-openai>=1.3.3",
    "langgraph>=1.2.6",
    "loguru>=0.7.3",
    "numexpr>=2.14.1",
    "prometheus-fastapi-instrumentator>=8.0.2",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pyjwt>=2.13.0",
    "pypdf>=6.14.2",
    "python-docx>=1.2.0",
    "redis>=8.0.1",
    "sqlalchemy>=2.0.51",
    "tiktoken>=0.13.0",
    "unstructured>=0.23.1",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]
